BASW-269: Ensure spacing between recurring contributions sections

--- a/scss/civicrm/contact/pages/_contributions.scss
+++ b/scss/civicrm/contact/pages/_contributions.scss
@@ -538,6 +538,10 @@
       @include expandable-table;
     }
   }
+
+  .crm-contact-contribute-recur-active {
+    margin-bottom: 13px;
+  }
 }
 
 .CRM_Contribute_Form_Contribution {
